nginx-demo/nginx_deployment.yaml
#apiVersion: apps/v1
#kind: Deployment
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: nginx-gyeongsik
  labels:
    app: nginx-deploy
  name: nginx-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deploy
  template:
    metadata:
      labels:
        app: nginx-deploy
    spec:
      # initContainers:
      # - name: init-cloudsdk
      #   image: google/cloud-sdk:slim
      serviceAccountName: k8s-build-agent
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: gyeongsik-clone
          mountPath: "/usr/share/nginx/html"
        volumeMounts:
          - name: google-secrets
            mountPath: /opt/google-secrets
        lifecycle:
          postStart:
            exec:
              command:
                - /bin/sh
                - -c 
                - |
                  gsutil -m cp -r https://storage.cloud.google.com/jgs-asia/k8s-storage-test/date.sh /usr/share/nginx/;
                  chmod 755 /usr/share/nginx/date.sh;
                  sh -x /usr/share/nginx/date.sh > /usr/share/nginx/html/index.html;
                  touch /usr/share/nginx/html/health_check.txt;
                  
                  
          preStop:
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  sleep 5;
                  nginx -s quit;
      nodeSelector:
        cloud.google.com/gke-nodepool: default-pool 
      volumes:
      - name: gyeongsik-clone
        emptyDir: {}
      volumes:
        - name: google-secrets
          secret:
            secretName: k8s-build-agent-token-qmrjg
