nginx-demo/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service 
  labels:
    app: nginx-deploy
  namespace: nginx-gyeongsik 
spec:
  type: NodePort 
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx-deploy
